/*
 * This program source code file is part of KiCad, a free EDA CAD application.
 *
 * Copyright (C) 2024 KiCad Developers, see AUTHORS.txt for contributors.
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU General Public License as published by the
 * Free Software Foundation, either version 3 of the License, or (at your
 * option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package kiapi.schematic.commands;

import "common/types/base_types.proto";
import "schematic/schematic_types.proto";

message GetSchematicData
{
  kiapi.common.types.DocumentSpecifier document = 1;
}

message GetSchematicDataResponse
{
  repeated kiapi.schematic.types.Symbol         symbols              = 1;
  repeated kiapi.schematic.types.Line           wires                = 2;
  repeated kiapi.schematic.types.Line           buses                = 3;
  repeated kiapi.schematic.types.LocalLabel     local_labels         = 4;
  repeated kiapi.schematic.types.GlobalLabel    global_labels        = 5;
  repeated kiapi.schematic.types.HierarchicalLabel hierarchical_labels = 6;
}

message PlaceSymbol
{
  kiapi.common.types.DocumentSpecifier document = 1;
  kiapi.common.types.LibraryIdentifier lib_id   = 2;
  kiapi.common.types.Vector2           position = 3;
  string                               reference = 4;
  string                               value     = 5;
  uint32                               unit      = 6;
  double                               rotation  = 7;
  bool                                 mirror_x  = 8;
  bool                                 mirror_y  = 9;
}

message PlaceSymbolResponse
{
  kiapi.schematic.types.Symbol symbol = 1;
}

message PlaceWire
{
  kiapi.common.types.DocumentSpecifier document = 1;
  repeated kiapi.common.types.Vector2   points   = 2;
  kiapi.schematic.types.SchematicLayer  layer    = 3;
}

message PlaceWireResponse
{
  repeated kiapi.schematic.types.Line segments = 1;
}

